[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SMITH_KEATON_softwarebuilding_assignment"
authors = [
    {name = "Keaton Smith", email = "keatonvsmith@gmail.com"},
]
description = "Building Robust Software Summative Assignment"
version = "0.1.0"
dependencies = ["matplotlib", "numpy"]
requires-python = ">=3.10.0"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]