[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Analysis"
authors = [
    {name = "Keaton Smith", email = "keatonvsmith@gmail.com"},
]
description = "Building Robust Software Summative Assignment"
version = "0.1.0"
dependencies = ["typing", "matplotlib", "pyyaml", "requests", "numpy", "pytest"]
requires-python = ">=3.11.0"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]